# report-gen

./: .gitignore  README.md
.claude/: launch.json
supabase/migrations/: 0001_init.sql  0002_tag_convention.sql  0003_placeholder_context.sql  0004_previews_bucket.sql  0005_templates.sql  0006_templates_tag_convention.sql
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
web/src/components/: AppBar.tsx  AppLayout.tsx  DocPreview.tsx  NavRail.tsx
web/src/components/ui/: form.tsx  icons.tsx  primitives.tsx
web/src/components/workspace/: TemplateWorkspace.tsx
web/src/lib/: auth.tsx  detectTags.ts  supabase.ts  templates.ts  theme.ts  toast.tsx  worker.ts
web/src/pages/: Dashboard.tsx  Login.tsx  ReportEditor.tsx  ReportGenerate.tsx  TemplateDocument.tsx
worker/: .dockerignore  .env.example  Dockerfile  pyproject.toml  render.yaml
worker/app/: annex.py  auth.py  config.py  markers.py  parse_docx.py  pipeline.py  prefix_render.py  server.py  storage.py
