[project]
name = "report-gen-worker"
version = "0.1.0"
description = "Worker de génération de rapports PDF (docx + datasources → PDF)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.2",
  "supabase>=2.8.0",
  "docxtpl>=0.18.0",
  "PyMuPDF>=1.24.10",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
